// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage should match snapshot and render EventDetail 1`] = `
<Translate(EventDetail)
  event={
    Object {
      "allDay": true,
      "availableLanguages": Object {
        "ar": "1236",
        "en": "1234",
      },
      "endDate": "2017-11-18T19:30:00.000Z",
      "id": 1235,
      "startDate": "2017-11-18T09:30:00.000Z",
      "title": "erstes Event",
    }
  }
  language="en"
  location="augsburg"
/>
`;

exports[`EventsPage should match snapshot and render EventList 1`] = `
<Translate(EventList)
  events={
    Array [
      Object {
        "allDay": true,
        "availableLanguages": Object {
          "ar": "1236",
          "de": "1235",
        },
        "endDate": "2017-11-18T19:30:00.000Z",
        "id": 1234,
        "startDate": "2017-11-18T09:30:00.000Z",
        "title": "first Event",
      },
      Object {
        "allDay": true,
        "availableLanguages": Object {
          "ar": "1236",
          "en": "1234",
        },
        "endDate": "2017-11-18T19:30:00.000Z",
        "id": 1235,
        "startDate": "2017-11-18T09:30:00.000Z",
        "title": "erstes Event",
      },
      Object {
        "allDay": true,
        "endDate": "2017-11-18T19:30:00.000Z",
        "id": 2,
        "startDate": "2017-11-18T09:30:00.000Z",
        "title": "second Event",
      },
    ]
  }
  language="en"
  url="/augsburg/en/events"
/>
`;

exports[`EventsPage should match snapshot and render Spinner 1`] = `
<Spinner
  fadeIn="full"
  name="line-scale-party"
  noFadeIn={false}
  overrideSpinnerClassName=""
/>
`;
